# Database-Router

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  Caddyfile  Dockerfile  Dockerfile.webui  README.md  config.example.json  docker-compose.yml  go.mod  go.sum  pg-query.py  renovate.json  start-webui.bat  start.bat  test_operations.py
.gitea/workflows/: test.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: docker-publish.yml  npm-publish-core.yml  npm-publish-sdk.yml  npm-publish.yml  pypi-publish-core.yml  pypi-publish-sdk.yml  pypi-publish.yml  renovate.yml
ansible/: README.md  ansible.cfg  inventory.ini  playbook.yml
ansible/group_vars/: dbrouter.yml
ansible/roles/caddy/handlers/: main.yml
ansible/roles/caddy/tasks/: main.yml
ansible/roles/caddy/templates/: Caddyfile.j2
ansible/roles/dbrouter/handlers/: main.yml
ansible/roles/dbrouter/tasks/: main.yml
ansible/roles/dbrouter/templates/: config.json.j2  env.j2
ansible/roles/docker/tasks/: main.yml
certs/: gen-certs.ps1  gen-certs.sh
cmd/: main.go
cmd/webui/: main.go
cmd/webui/web/: index.html
core/: README.md
core/cpp/: CMakeLists.txt  README.md
core/cpp/include/xeze/dbr/: core.hpp
core/cpp/src/: core.cpp
core/go/: README.md  client.go  go.mod  go.sum
core/java/: README.md  pom.xml
core/java/src/main/java/org/xeze/dbr/core/: XezeCoreClient.java
core/node/: README.md  index.d.ts  index.js  package.json
core/python/: README.md  pyproject.toml  setup.py
core/python/xeze_core/: __init__.py
core/rust/: Cargo.toml  README.md
core/rust/src/: lib.rs
core/zig/: README.md  build.zig  build.zig.zon
core/zig/src/: core.zig
dbr-core/: pyproject.toml
dbr-core/xeze_core/: __init__.py  client.py
deploy/: docker-compose.yml
deployer/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
deployer/dbr/: Dockerfile  docker-compose.yml
docs/: CONTRIBUTING.md  SECURITY.md  api-x.md  api.md  command.md  config.md  deployment.md  guide.md  mtls-guide.md  notes.md  pooling-notes.md  redis.md  redis_cache_prefix.md
docs/ISSUE_TEMPLATE/: bug_report.md
examples/cloudrun-script/: deploy.sh
examples/dbr-core-test/: app.py  requirements.txt
examples/dbr-core-test/static/: index.html
examples/gcp-cloudrun/: Dockerfile  README.md  package.json  server.js
examples/gcp-cloudrun/public/: index.html
examples/node-core-test/: index.js  package.json
examples/python/: README.md  app.py  client.py
examples/python-mtls-test/: ca.crt  client.crt  client.key  dbrouter_pb2_grpc.py  main.py
examples/python-todo-app/: app.py  requirements.txt  todo.py
examples/python-todo-app/static/: index.html  script.js  style.css
examples/xeze-playground/: app.py
examples/xeze-playground/static/: index.html
frontend/: .firebaserc  firebase.json  index.html
frontend/.firebase/: hosting.ZGlzdA.cache
frontend/src/: App.jsx  index.css
frontend/src/components/: Controls.jsx  NetworkMap.jsx  StepIndicator.jsx  TerminalLogs.jsx
internal/config/: config.go
internal/db/: database.go
internal/handlers/: handler.go  health.go  middleware.go  mongo.go  postgres.go  redis.go
internal/server/: convert.go  errors.go  health_server.go  mongo_server.go  postgres_server.go  redis_server.go
internal/service/: errors.go  health.go  mongo.go  postgres.go  redis.go  service.go
internal/tlsconfig/: loader.go
internal/webhandler/: handler.go  health.go  mongo.go  postgres.go  redis.go
local-deploy/: Dockerfile  docker-compose.yml
proto/: dbrouter.proto
proto/dbrouter/: dbrouter.pb.go  dbrouter_grpc.pb.go
providers/: README.md
providers/aws/: terraform.tfvars.example
providers/digitalocean/: terraform.tfvars.example
providers/gcp/: main.tf  outputs.tf  provider.tf  versions.tf
providers/hetzner/: main.tf  provider.tf  terraform.tfvars.example  variables.tf  versions.tf
providers/linode/: main.tf  provider.tf  versions.tf
providers/modules/compute/azure/: main.tf  outputs.tf
providers/modules/compute/digitalocean/: main.tf  outputs.tf
providers/modules/compute/hetzner/: outputs.tf
providers/modules/dns-cloudflare/: main.tf  variables.tf
pypi/: pyproject.toml
sdk/: README.md
sdk/cpp/: CMakeLists.txt  README.md
sdk/cpp/include/xeze/dbr/: client.hpp
sdk/cpp/src/: client.cpp
sdk/go/: README.md  client.go  go.mod  go.sum
sdk/go/proto/dbrouter/: dbrouter.pb.go
sdk/java/: README.md  pom.xml
sdk/java/src/main/java/org/xeze/dbr/: Options.java  XezeDbrClient.java
sdk/node/: README.md  index.d.ts  index.js  package.json  test.js
sdk/python/: LICENSE  README.md  pyproject.toml
sdk/python/src/xeze_dbr/: __init__.py  dbrouter_pb2.py  dbrouter_pb2_grpc.py
sdk/rust/: Cargo.toml  README.md  build.rs
sdk/rust/src/: lib.rs
sdk/zig/: README.md  build.zig  build.zig.zon
sdk/zig/src/: client.zig
terraform/: .gitignore  README.md  dns.tf  firewall.tf  main.tf  output.tf  secrets.tf  ssh.tf  terraform.tfvars.example  variables.tf
terraform/aws/: main.tf  provider.tf  variables.tf  versions.tf
terraform/azure/: main.tf  provider.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/digital-ocean/: dns.tf  output.tf  provider.tf  secrets.tf  variables.tf
terraform/digitalocean/: main.tf  provider.tf  variables.tf  versions.tf
terraform/gcp/: terraform.tfvars.example  variables.tf
terraform/hetzner/: dns.tf  firewall.tf  main.tf  output.tf  provider.tf  ssh.tf  terraform.tfvars.example  variables.tf
terraform/linode/: terraform.tfvars.example  variables.tf
terraform/modules/compute/aws/: main.tf  outputs.tf
terraform/modules/compute/gcp/: main.tf  outputs.tf  variables.tf
terraform/modules/compute/hetzner/: main.tf
terraform/modules/compute/linode/: main.tf  outputs.tf
tests/: README.md  fetch-certs.ps1  fetch-certs.sh  test-grpc.ps1  test-grpc.sh
