[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xeze-dbr"
version = "0.2.2"
description = "Python gRPC client for the Xeze Database Router (PostgreSQL, MongoDB, Redis over mTLS)"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Xeze", email = "admin@xeze.org"},
]
keywords = ["grpc", "database", "postgresql", "mongodb", "redis", "mtls", "db-router"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
]

[project.urls]
Homepage = "https://github.com/Xeze-org/Database-Router"
Repository = "https://github.com/Xeze-org/Database-Router"
Documentation = "https://github.com/Xeze-org/Database-Router/tree/main/pypi"

[tool.setuptools.packages.find]
where = ["src"]
