[package]
name = "xeze-dbr"
version = "0.1.1"
edition = "2021"
authors = ["Xeze <dev@xeze.org>"]
description = "Rust gRPC client for the Xeze Database Router (PostgreSQL, MongoDB, Redis over mTLS)"
license = "Apache-2.0"
repository = "https://github.com/Xeze-org/Database-Router"
keywords = ["grpc", "database", "postgresql", "mongodb", "redis"]
categories = ["database", "network-programming"]
include = ["src/**/*", "proto/**/*", "build.rs", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
tonic = { version = "0.14", features = ["tls"] }
prost = "0.13"
prost-types = "0.14"
tokio = { version = "1", features = ["full"] }
rustls-pemfile = "2.1"

[build-dependencies]
tonic-build = "0.14"
